# europeana-translate-statistics

./: crafted-ekt-annotations.json  crafted-ekt_human_accepted_annotations.json  crafted-momu-annotations.json  crafted-momu_human_accepted_annotations.json  crafted-prato-annotations.json  crafted-prato_human_accepted_annotations.json  ekt  europeana-translate-statistics-24-02-2023.rar  europeana-translate-statistics.rar  europeana-translate-translations-dataset.rar  momu  prato  pyproject.toml  results.txt  translate-dutch-translations-dataset-20-02-2023.tsv  translate-french-translations-dataset-20-02-2023.tsv  translate-french-translations-dataset-24-02-2023.tsv  translate-italian-translations-dataset-24-02-2023.tsv  εκτ
assets/arial/: ARIBL0.pkl  arial.pkl
europeana_translate_statistics/: calc_simpledorff.py  crafted-export-human-annotations.py  crafted-statistics.py  dataset_creation.py  file_name.csv  statistics.py  stats.py  test-get-record-external-ids.py  votes.csv
