[tool.poetry]
name = "europeana-translate-statistics"
version = "0.1.0"
description = ""
authors = ["tzortzis <tzortzispanagiotis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
fpdf = "^1.7.2"
pandas = "^1.5.3"
simpledorff = "^0.0.2"
krippendorff = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
